# OCR

./: .dockerignore  .env.example  .gitignore  Documento sin título (10).txt  PLAN_TECNICO_OCR_APP.md  README.md  json.txt  package-lock.json  package.json  reporte_ocr (5).html  tmp-ocr-platform.env  tmp-ocr-worker.service  tmp-run-worker-loop.sh  tsconfig.base.json
services/ocr-api/: Dockerfile  README.md  pyproject.toml
services/ocr-api/app/: core_env.py  main.py  schemas.py
services/ocr-api/app/core/: contracts.py  feature_flags.py  security.py  telemetry.py
services/ocr-api/app/engines/: azure_document_intelligence.py  doctr_ocr.py  factory.py  google_documentai.py  normalizers.py  ocr.py  paddle_ocr.py
services/ocr-api/app/routers/: pipeline.py
services/ocr-api/app/services/: custom_extraction.py  (+26 more)
services/ocr-api/ocr_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ocr-api/tests/: test_certificate_afp_support.py  test_certificate_normalizer.py  test_cross_side_consistency.py  test_custom_extraction.py  test_document_splitter.py  test_feature_flags.py  test_field_adjudication.py  test_field_candidates.py  test_identity_back_support.py  test_identity_front_back_pack.py  test_identity_side_aware_rules.py  test_integrity_scoring.py  test_layout_extraction.py  test_mobile_capture_hardening.py  test_ocr_ensemble.py  test_openai_normalizer.py  test_passport_driver_support.py  test_processing_pipeline_rescue.py  test_quality_analysis.py  test_rule_packs.py  test_synthetic_certificate_dataset.py  test_synthetic_documents.py  test_table_extraction.py
(+242 files in other folders)
